# mdbook-to-llmstxt

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MODULAR_ARCHITECTURE.md  README.md  mdbook_to_llms.py  mdbook_to_llms_new.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_mdbook_llms_modular.py  test_mdbook_to_llms.py
mdbook_llms/: __init__.py  cli.py  exceptions.py  git_utils.py  markdown_utils.py  models.py  parser.py  renderer.py  site_ingester.py
